[project]
name = "pdf-convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.9.0",
    "python-docx>=1.2.0",
    "xlrd>=2.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
